# luca

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  setting.py
core/: __init__.py  base_filter.py  dependencies.py  renderer.py
migrations/: README.md  env.py
migrations/versions/: 2caaf65401f1_all_models.py  339ab5bca58c_all_models.py  4ac3f4f682e2_all_models.py
models/orm_models/: core.py  crud.py  db.py
models/schema/: collection_schema.py  field_schema.py
routers/: __init__.py  auth.py  collection_router.py  content_router.py  field_router.py  menu_router.py  permission_router.py  role_router.py  schema.py  settings.py  taxonomy_router.py  translations.py  user_router.py
