[tool.poetry]
package-mode = false
name = "mitre"
version = "0.0.1"
description = "mitre is an Open source Headless CMS"
authors = ["Omid Zarinmahd <zarinpy@gmail>"]  # Replace with your info
license = "MIT"  # Or your preferred license
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = {extras = ["all"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.34.1"}
sqlalchemy = "^2.0.28"
asyncpg = "0.30.0"  # PostgreSQL (async)
alembic = "1.15.2"
pydantic = {extras = ["email"], version = "^2.11.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"
fastapi-pagination = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
coverage = {extras = ["toml"], version = "7.8.0"}
flake8 = "^7.0.0"
mypy = "^1.11.3"
isort = "^5.13.2"
pre-commit = "4.2.0"
